force-app/main/default/objects/Appointment_Category__c/Appointment_Category__c.object-meta.xml
<CustomObject>
    <label>Appointment Category</label>
    <nameField>
        <label>Appointment Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appointment Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>