force-app/main/default/objects/Appointment_Category__c/fields/IsAssetMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsAssetMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Mandatory?</label>
    <type>Checkbox</type>
</CustomField>