force-app/main/default/objects/Appointment_Category__c/fields/IsAttendeeMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsAttendeeMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendee Mandatory?</label>
    <type>Checkbox</type>
</CustomField>