force-app/main/default/objects/Appointment_Category__c/fields/IsAvaliablePublically__c.field-meta.xml
<CustomField>
    <fullName>IsAvaliablePublically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available Publically?</label>
    <type>Checkbox</type>
</CustomField>