force-app/main/default/objects/Appointment_Category__c/fields/IsLocationMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsLocationMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Mandatory?</label>
    <type>Checkbox</type>
</CustomField>