force-app/main/default/objects/Appointment_Category__c/fields/IsMultipleAsset__c.field-meta.xml
<CustomField>
    <fullName>IsMultipleAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Asset Allowed?</label>
    <type>Checkbox</type>
</CustomField>