force-app/main/default/objects/Appointment_Category__c/fields/IsMultipleAttendee__c.field-meta.xml
<CustomField>
    <fullName>IsMultipleAttendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Attendee Allowed?</label>
    <type>Checkbox</type>
</CustomField>