force-app/main/default/objects/Appointment_Category__c/fields/IsMultipleLocation__c.field-meta.xml
<CustomField>
    <fullName>IsMultipleLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Location Allowed?</label>
    <type>Checkbox</type>
</CustomField>