force-app/main/default/objects/Appointment_Category__c/fields/IsMultipleResource__c.field-meta.xml
<CustomField>
    <fullName>IsMultipleResource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Resource Allowed?</label>
    <type>Checkbox</type>
</CustomField>