force-app/main/default/objects/Appointment_Category__c/fields/IsMultipleService__c.field-meta.xml
<CustomField>
    <fullName>IsMultipleService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Service Allowed?</label>
    <type>Checkbox</type>
</CustomField>