force-app/main/default/objects/Appointment_Category__c/fields/IsPricingApplicable__c.field-meta.xml
<CustomField>
    <fullName>IsPricingApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Applicable?</label>
    <type>Checkbox</type>
</CustomField>