force-app/main/default/objects/Appointment_Category__c/fields/IsResourceMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsResourceMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource Mandatory?</label>
    <type>Checkbox</type>
</CustomField>