force-app/main/default/objects/Appointment_Category__c/fields/IsServiceMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsServiceMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Mandatory?</label>
    <type>Checkbox</type>
</CustomField>