force-app/main/default/objects/Appointment_Category__c/fields/PricingForAsset__c.field-meta.xml
<CustomField>
    <fullName>PricingForAsset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PricingForAsset</label>
    <type>Checkbox</type>
</CustomField>