force-app/main/default/objects/Appointment_Category__c/fields/PricingForResource__c.field-meta.xml
<CustomField>
    <fullName>PricingForResource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PricingForResource</label>
    <type>Checkbox</type>
</CustomField>