force-app/main/default/objects/Appointment_Category__c/fields/PricingForService__c.field-meta.xml
<CustomField>
    <fullName>PricingForService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PricingForService</label>
    <type>Checkbox</type>
</CustomField>